# school_budget

./: .gitignore  Makefile  Pipfile  datasets.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  train.yml
config/: hyperparameters.yml
notebooks/: eda.ipynb  model.ipynb  model_pipeline.ipynb  model_prediction.ipynb  model_train_initial.ipynb  model_train_pipeline.ipynb  nlp.ipynb  train_v1.csv
school_budget/: config.py  data.py  features.py  models.py
school_budget_web/: app.py
scripts/: train.py
ui/: app.py
